--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.25)
-project(LZX)
+project(NanoSVG)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -7,6 +7,6 @@ if(WIN32)
     set(CMAKE_SHARED_LIBRARY_PREFIX "lib")
 endif()
 
-include_directories(lzx)
+include_directories(nanosvg)
 
-add_library(LZX SHARED main.cpp lzx/lzx_decoder.c lzx/lzx_encoder.c)
+add_library(NanoSVG SHARED main.cpp)
